# StreamingCommunity

./: .gitignore  README.md  config.json  requirements.txt  server.py  server_type.py
.github/.domain/: domains.json
StreamingCommunity/Api/Player/: vixcloud.py
StreamingCommunity/Api/Site/streamingcommunity/: api.py  film.py  series.py
StreamingCommunity/Lib/Downloader/HLS/: downloader.py  progress.py  segments.py
StreamingCommunity/Util/: os.py
client/dashboard/public/: manifest.json
client/dashboard/src/: App.css  App.js
client/dashboard/src/components/: ApiUrl.js  Dashboard.js  Downloads.js  Navbar.js  SearchResult.js  TitleDetail.js  Watchlist.js
desktop-app/: .gitignore  Cargo.toml  README.md
desktop-app/src/: app.js  db.rs  download.rs  index.html  main.rs  models.rs  notifications.rs  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src/api/: download.rs  mod.rs  search.rs  titles.rs  watchlist.rs
desktop-app/src/src/components/: Dashboard.js  Downloads.js  SearchBar.js
desktop-app/src/streaming/: mod.rs  player.rs  subtitles.rs
