[package]
name = "streaming-community-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["shell-open"] }
tokio = { version = "1.35.1", features = ["full"] }
mongodb = "2.8.0"
axum = "0.7.3"
tower-http = { version = "0.5.0", features = ["cors"] }
reqwest = { version = "0.11.23", features = ["json"] }
futures = "0.3.30"
chrono = { version = "0.4.31", features = ["serde"] }
tower = "0.4.13"
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.79"
thiserror = "1.0.56"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
